tests/chapter_18/invalid_struct_tags/var_type_undeclared.c
int main(void) {
    // it's illegal to define a variable with an undeclared/incomplete structure
    // type
    struct s var;
    return 0;
}